--- a/src/main/resources/templates/booklist.html
+++ b/src/main/resources/templates/booklist.html
@@ -11,33 +11,39 @@
 
 
 <body>
-	<h1>Books</h1>
-	
-    <table class ="table table-striped">
-		<tr>
-		    <th>Author</th>
-		    <th>Title</th>
-		    <th>ISBN</th>
-		    <th>Year</th>
-		    <th>Price</th>
-		    <th>Category</th>
-		    <th></th>
-		    <th></th>
-		</tr>  
-		
-    	<tr th:each = "book : ${books}">
-    		<td th:text="${book.author}"></td>
-    		<td th:text="${book.title}"></td>
-    		<td th:text="${book.isbn}"></td>
-    		<td th:text="${book.year}"></td>
-    		<td th:text="${book.price} + €"></td>
-    		<td th:text="${book.category.name}"></td>
- 			<td><a class="btn btn-danger" th:href="@{/delete/{id}(id=${book.id})}">Delete</a></td>
- 			<td><a class="btn btn-warning" th:href="@{/edit/{id}(id=${book.id})}">Edit</a></td>
- 		</tr>
-     </table>
-    
-	 <a class="btn btn-success" href="/add"  >Add Book</a>
-	 
+	<div class="container">
+		<h1 class ="text-center">Books 📖</h1>
+
+		<table class="table table-striped">
+			<tr>
+				<th>Author</th>
+				<th>Title</th>
+				<th>ISBN</th>
+				<th>Year</th>
+				<th>Price</th>
+				<th>Category</th>
+				<th></th>
+				<th></th>
+			</tr>
+
+			<tr th:each="book : ${books}">
+				<td th:text="${book.author}"></td>
+				<td th:text="${book.title}"></td>
+				<td th:text="${book.isbn}"></td>
+				<td th:text="${book.year}"></td>
+				<td th:text="${book.price} + €"></td>
+				<td th:text="${book.category.name}"></td>
+				<td>
+					<a th:href="@{/delete/{id}(id=${book.id})}" class="btn btn-danger">Delete</a>
+				</td>
+				<td>
+					<a th:href="@{/edit/{id}(id=${book.id})}" class="btn btn-primary">Edit</a>
+				</td>
+			</tr>
+		</table>
+
+		<a class="btn btn-success" href="/add">Add Book</a>
+
+	</div>
 </body>
 </html>
