Week 5 Spring security

--- a/src/main/resources/templates/editbook.html
+++ b/src/main/resources/templates/editbook.html
@@ -3,8 +3,8 @@
 <head>
     <title>Booklist</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-   <link type="text/css" rel="stylesheet" href="css/bootstrap.min.css"
-    th:href="@{css/bootstrap.min.css}">
+    <link type="text/css" rel="stylesheet" href="css/bootstrap.min.css"
+     th:href="@{css/bootstrap.min.css}">
 </head>
 <body>
     <h1>Edit book</h1>
@@ -25,3 +25,4 @@
         </form>
     </div>
 </body>
+</html>
