--- a/src/main/resources/templates/booklist.html
+++ b/src/main/resources/templates/booklist.html
@@ -13,6 +13,14 @@
 <body>
 	<div class="container">
 		<h1 class ="text-center">Books 📖</h1>
+		
+		<h3 th:inline="text">Welcome [[${#httpServletRequest.remoteUser}]]</h3>		
+		
+		<div class="col-md-4" style="padding:20px 0">
+			<form th:action="@{/logout}" method="post">
+				<input type="submit" value="Sign Out" class="btn btn-sm btn-danger"/>
+			</form>
+		</div>
 
 		<table class="table table-striped">
 			<tr>
@@ -32,14 +40,12 @@
 				<td th:text="${book.isbn}"></td>
 				<td th:text="${book.year}"></td>
 				<td th:text="${book.price} + €"></td>
-				<td th:text="${book.category.name}"></td>
-				<td>
-					<a th:href="@{/delete/{id}(id=${book.id})}" class="btn btn-danger">Delete</a>
-				</td>
-				<td>
-					<a th:href="@{/edit/{id}(id=${book.id})}" class="btn btn-primary">Edit</a>
-				</td>
-			</tr>
+    			<td th:text="${book.category.name}"></td>
+    			
+ 				<td sec:authorize="hasAuthority('ADMIN')"><a th:href="@{/delete/{id}(id=${book.id})}" class="btn btn-xs btn-danger">Delete</a></td>
+ 				<td sec:authorize="hasAuthority('ADMIN')"><a th:href="@{/edit/{id}(id=${book.id})}" class="btn btn-primary">Edit</a></td>    
+ 					
+    		</tr>
 		</table>
 
 		<a class="btn btn-success" href="/add">Add Book</a>
